css/style.css
html {
  color: #222;
  font-size: 1em;
}



/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
  display: none !important;
}


.visually-hidden {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
 * Extends the .visually-hidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visually-hidden.focusable:active,
.visually-hidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
  visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * The use of `table` rather than `block` is only necessary if using
 * `::before` to contain the top-margins of child elements.
 */

.clearfix::before,
.clearfix::after {
  content: "";
  display: table;
}

.clearfix::after {
  clear: both;
}


/* Apply the font to body or specific elements */
body {
  font-family:  "Noto Sans KR", sans-serif;
  font-weight: 400; /* Regular weight by default */
}


body {
  height: 100vh;
  padding: 6em 1em;
  @media (max-width: 768px) {
    padding: 3em 1.4em;
  }
}

h1, h2, h3, h4, h5, p, span {
  margin-top: 0;
  margin-bottom: 0;
  margin-block-start: 0;
  margin-block-end: 0;
}

h1 {
  font-size: 3rem;
}

a {
  text-decoration: none;
  color: inherit;
  font-weight: 500;
}

ul {
  padding-left: 1.2rem;
  @media (max-width: 768px) {
    padding-left: 1rem;
  }
}

li {
  line-height: 2;
}

.page-container {
  width: 100%;
  max-width: 900px;
  margin: 0 auto;
}

.jd-section-gap {
  gap: 3rem;
}

.link-icon::before {
  content: "🔗";
  filter: brightness(0);
  text-decoration: none !important;
}

.circle-highlight {
  position: relative;
}

.circle-highlight::before {
  content: "";
  display: block;
  position: absolute;
  top: -0.1rem;
  left: -0.5rem;
  z-index: -1;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: rgba(10, 152, 255, 0.5);
}

.jd-container {
  display: flex;
  align-items: start;
  gap: 3rem;
}

.highlight {
  position: relative;
}

.highlight::after {
  content: " ";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 50%;
  background-color: #0A98FF;
  opacity: 0.5;
  border-radius: 0.5rem;
  z-index: -1;
}


.flex {
  display: flex;
}

.flex-col {
  flex-direction: column;
}

.flex-shrink-none {
  flex-shrink: 0;
}

.items-center {
  align-items: center;
}

.items-start {
  align-items: start;
}

.w-full {
  width: 100%;
}

.text-theme {
  color: #0A98FF;
}

.text-sub {
  font-size: 0.8rem;
  color: #6d6d6d;
}

.text-indent {
  text-indent: 1rem;
}

.text-underline {
  text-decoration: underline;
}

.bg-theme {
  background-color: #0A98FF;
}

.intro-external-link {
  font-size: 0.8rem;
  color: #0A98FF;
  cursor: pointer;
}

.intro-external-link:hover {
  color: #666;
}

.title {
  font-size: 2em;
  font-weight: 700;
}

.description {
  font-size: 1.3em;
  line-height: 1.8;
}

.resume-title-flex {
  display: flex;
  align-items: center;
}

.section-title {
  font-size: 12rem;
  font-weight: 600;
}


.company-title {
  font-weight: 600;
}

.education-title {
  width: 185px;
}

.cursor-pointer {
  cursor: pointer;
}

.dev-title::after {
  content: ".";
  border-radius: 100%;
  color: #0A98FF;
}

.blog-link {
  font-size: 0.8rem;
  font-weight: 600;
  color: #0A98FF;
}

.blog-link:hover {
  color: #222;
}

.tech-stack {
  display: flex;
  align-items: start;
  gap:1rem;
  padding: 0.6rem 0;
  border-top: 1px solid #e2e8f0;
  border-bottom: 1px solid #e2e8f0;
}

.section-padding-border {
  padding: 1rem 0;
  border-bottom: 1px solid #e2e8f0;
  border-bottom: 1px solid #e2e8f0;
}

.section-title {
  font-size: 1.3rem;
  font-weight: 600;
  margin-bottom: 1rem;
}

.sub-list::before {
  content: "-";
  margin-right: 0.5rem;
}

.sub-list {
  font-size: 0.98rem;
  list-style: none;
}

.external-link {
  position: relative;
  display: inline-block;
  cursor: pointer;
  font-weight: 600;
}

.external-link::before {
  content: "🔗";
  filter: brightness(0);
  text-decoration: none !important;
}

.external-link-icon-before::before{
  content: "🔗";
  filter: brightness(0);
  text-decoration: none !important;
}

.external-link::after {
  content: " ";
  position: absolute;
  left: 0;
  bottom: 8px;
  width: 100%;
  height: 30%;
  background-color: #0A98FF;
  opacity: 0.5;
  border-radius: 0.5rem;
  z-index: -1;
}


.text-theme-hover:hover {
  color: #0A98FF;
  transition: color 0.5s;
}

@media (max-width: 768px) {
  body {
    padding: 3em 1.4em;
  }

  h1 {
    font-size: 2.5rem;
  }

  ul {
    padding-left: 1rem;
  }

  li {
      padding: 0.1rem 0;
  }

  .company-title, .education-title {
    width: 100%;
  }

  .company-title {
    font-size: 2rem;
  }

  .jd-container {
    padding-top: 2rem;
    border-top: 1px solid #e2e8f0;
    flex-direction: column;
    gap:1.5rem;
  }

  .jd-section-gap {
    gap: 1.2rem;
  }

  .job-title {
    font-size: 1.5rem;
  }

  .title, .description  {
      font-size: 1rem;
  }

  .tech-stack {
    flex-direction: column;
    align-items: start;
  }

  .resume-title-flex {
    flex-direction: column;
    align-items: start;
  }

  .responsive-inline-block {
    display: inline-block;
  }

  .side-project-responsive {
    -ms-flex-order: 2;
    order: 2;
  }

}

@media (max-width: 360px) {
  p, span,a {
    font-size: 0.9rem;
  }
  h1 {
    font-size: 2rem;
  }

  h2{
    font-size: 1.3rem;
  }

  ul {
    padding-left: 0.5rem;
  }

  li {
    padding: 0 0;
  }
}

